# LivesWonderfulPeople

./: Archive.xml  CMakeLists.txt  CMakeLists.txt.user.6a689be  DataXml.qrc  README.md  main.cpp
Icons/: MyIcons.qrc
Style/: EasyCode.qss  MyStyle.qrc
Windows/: Archive.xml  CMakeLists.txt
Windows/Commands/: AddWorkAuthorCommand.cpp  AddWorkAuthorCommand.h  CheckInputDataCommand.cpp  CheckInputDataCommand.h  Commands.h  HideWinCommand.h  ManagerLinkerCommand.cpp  ManagerLinkerCommand.h  SearchInputDataCommand.cpp  SearchInputDataCommand.h  WorkingWithDataLinker.cpp  WorkingWithDataLinker.h
Windows/InputDataWindow/: CMakeLists.txt  InputDataWindow.cpp  InputDataWindow.h  InputDataWindow.ui
Windows/Observers/: BinaryTree.cpp  BinaryTree.h  Tree.cpp  Tree.h
Windows/Stream/: Archive.cpp  Archive.h  ArchiveAuthor.cpp  ArchiveAuthor.h  ArchivePublisher.cpp  ArchivePublisher.h  Author.cpp  Author.h  BufferData.cpp  BufferData.h  Essay.cpp  Essay.h  Publisher.cpp  Publisher.h  XmlDomRead.cpp  XmlDomRead.h
Windows/StructureData/: AvlBuilder.cpp  AvlBuilder.h  BalancedTree.h  TreeBuilder.h
Windows/UiWindows/: HistorySearch.cpp  HistorySearch.h  InputData.cpp  InputData.h  ListTablesWithFoundData.cpp  ListTablesWithFoundData.h  MainWindow.cpp  MainWindow.h  SearchPublisherWindow.cpp  SearchPublisherWindow.h  TableAboutAuthor.cpp  TableAboutAuthor.h  TableAllPublisherWindow.cpp  TableAllPublisherWindow.h  Warning.cpp  Warning.h  WhatInputWindow.cpp  WhatInputWindow.h  WhatInputWindow.ui  Window.cpp  Window.h  historysearch.ui  mainwindow.ui  searchpublisherwindow.ui  tableallpublisherwindow.ui
Windows/build-InputDataWindow-Desktop_Qt_6_2_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
Windows/build-InputDataWindow-Desktop_Qt_6_2_3_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-3d409e1344d197896990.json  cmakeFiles-v1-82eef516cb08d5e7cc05.json  index-2022-09-16T17-26-00-0765.json  target-InputData_lib_autogen_timestamp_deps-Debug-7fe08988acd6df0899b5.json
Windows/build-InputDataWindow-Desktop_Qt_6_2_3_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-eb46dfaf951dd0270b1d.json  codemodel-v2-5ba9a62b883262339a90.json  index-2022-09-16T17-12-22-0981.json  target-InputData_lib-Debug-b704e1860bf5ba5d0280.json  target-InputData_lib_autogen-Debug-beab1fcf44d94dc6ebeb.json
Windows/build-InputDataWindow-Desktop_Qt_6_2_3_GCC_64bit-Debug/InputData_lib_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
Windows/build-InputDataWindow-Desktop_Qt_6_2_3_GCC_64bit-Debug/InputData_lib_autogen/EWIEGA46WW/: moc_InputDataWindow.cpp
Windows/build-InputDataWindow-Desktop_Qt_6_2_3_GCC_64bit-Debug/InputData_lib_autogen/include/: ui_InputDataWindow.h
